Skeleton of post_form.html in place

--- a/src/ssr/view/post_form.html
+++ b/src/ssr/view/post_form.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Add New Post</title>
 </head>
 <body>
-    
+    <form action="post">
+        <input type="title">
+        <input type="text">
+        <input type="submit" value="create post">
+    </form>
 </body>
 </html>
